--- a/QuoteStyle.css
+++ b/QuoteStyle.css
@@ -9,146 +9,134 @@
 
 body {
 
-/* background: #FF5F6D;  
-background: -webkit-linear-gradient(to right, #FFC371, #FF5F6D);  
-background: linear-gradient(to right, #FFC371, #FF5F6D);  */
-background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-            url('Flower2.jpg');
-/* background-position: center; */
-/* background-position: fixed; */
-background-size: cover;
-/* background-repeat: none; */
+    background: #0f0c29;  
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); 
+    
+
 height: 100vh;
-
-
 
 color: white;
 
-/* font-family: 'Playfair Display', serif; */
-/* font-family: 'Lily Script One', cursive; */
-font-family: 'Cherry Swash', cursive;
-
-}
-
-@media (max-width: 37.5em) {
-    .generator {
-    width: 100%;
-    margin: 5px auto;
-    padding: 10px;
-    margin: 0;
-    }
-
-    div #quoteText {
-    font-size: 20px;
-    margin-bottom: 10px;
-    padding: 10px 5px;
-    width: 100%;
-    }
-
-    #quote {
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    }
-
+font-family: 'Glegoo', serif;
 }
 
 
 .generator {
    
-    width: 80%;
-    margin: 50px auto;
-
-    /* border-top: 1px solid white;
-    border-bottom: 1px solid white; */
-
-    /* border-radius: 5px; */
-    padding: 30px;
+    width: 90%;
+    margin: 75px auto;
+    border: 3px solid white;
+    border-radius: 5px;
+    padding: 5px;
+    position: relative;
     
 }
 
 
-p {
-    font-size: 50px;
-}
 
 #quote {
     text-align: left;
-    padding-left: 50px;
-    padding-right: 50px;
-}
-#author {
-    text-align: right;
-    padding-right: 100px;
+    padding-left: 15px;
+    padding-right: 5px;
+    font-size: 28px;
     
 }
 
-#quoteText {
-    margin-bottom: 50px;
-    padding: 100px 50px;
-    border-top: 1px solid;
-    border-color: linear-gradient(rgba(255, 255, 255, 0.322), white, rgba(255, 255, 255, 0.322));
-    border-bottom: 1px solid white;
+@media (min-width: 37rem) {
+    #quote {
+        font-size: 48px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    #author, .fa-quote-right, .fa-quote-left {
+        font-size: 48px;
+    }
+
+    .generator {
+        padding: 20px;
+    }
+
+    #quoteText {
+        margin-bottom: 50px;
+    }
+
 }
 
-#functionBar {
+
+#author {
+    text-align: right;
+    padding-right: 100px;
+    font-size: 28px;
+}
+
+#quoteText {
+    margin-bottom: 80px;
+    padding: 10px 5px 40px 5px;
+}
+
+div#functionBar {
     text-align: center;
-    height: 50px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
     
 }
 
 button {
     font-family: 'Lato', sans-serif;
-    /* border: 1px solid white; */
-    
-    border: none;
-    /* border-radius: 5px; */
+    border: 3px solid white;
+
+    border-radius: 5px;
     color: white;
     background: none;
+    
     width: 200px;
-    height: 50px;
     font-size: 18px;
     outline: none;
     padding: 10px;
-    line-height: 1;
+    
     margin-right: 5px;
     text-transform: uppercase;
     letter-spacing: 3px;
+}
 
+a.twitter-share-button {
+    font-size: 48px;
+    width: 50px;
+    height: 50px;
 }
 
 button:hover, .fa-twitter:hover {
     background-color: rgb(255, 255, 255);
-    color:  #FFC371;
+    color:  #24243e;
 }
 
 .fa-twitter {
-    position: absolute;
-    font-size: 48px;
-    height: 50px;
     
+    margin: none;
     color: white;
-    /* border: 1px solid white; */
+    border: 3px solid white;
     border-radius: 5px;
     padding: 10px;
     box-sizing: border-box;
-
- 
+    position: absolute;
+    bottom: 0px;
+    left: 205px;
+    
 }
 
-.fa-quote-left{
-    font-size: 30px;
+
+.fa-quote-left, .fa-quote-right{
+    font-size: 28px;
     color: white;
 
- 
 }
 
 .fa-quote-right {
-    font-size: 30px;
-    color: white;
     text-align: right;
     float: right;
 
- 
 }
 
